will rewrite whole code in class based view

--- a/templates/authors/author_individual.html
+++ b/templates/authors/author_individual.html
@@ -1,9 +1,9 @@
 {% extends "authors/index.html" %}
-{% load i18n %}
+{% comment %} {% load i18n %} {% endcomment %}
 
-{% block title %}{% blocktranslate %}Quotes by {{author_name}}{% endblocktranslate %}{% endblock title %}
+{% block title %}Quotes by {{author_name}}{% endblock title %}
 
-{% block meta_desc %}{% blocktranslate %}Discover the essence of {{author_name}}'s philospohy and insights through a curated selection of memorable quotes.{% endblocktranslate %}{% endblock meta_desc %}
+{% block meta_desc %}Discover the essence of {{author_name}}'s philospohy and insights through a curated selection of memorable quotes.{% endblock meta_desc %}
 
 {% block base_content %}
 
