--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load i18n %}
+{% comment %} {% load i18n %} {% endcomment %}
 
 {% block title %}{% trans "Contact Us" %}{% endblock title %}
 
