--- a/templates/qotd.html
+++ b/templates/qotd.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% comment %} {% load i18n %} {% endcomment %}
 
-{% block title %}{% trans "Quote of the Day" %}{% endblock title %}
+{% block title %}Quote of the Day{% endblock title %}
 
 {% block meta_desc %}{% endblock meta_desc %}
 
@@ -12,7 +12,7 @@
     {% for each in data %}
         <div class="card">
             <div class="card-header">
-            <div class="font-semibold text-xl text-primary">{{each.3|title}} {% trans "Quote of the Day" %}</div>
+            <div class="font-semibold text-xl text-primary">{{each.3|title}} Quote of the Day</div>
             </div>
             <div class="card-body md:text-xl">{{each.0}}</div>
             <div class="card-footer"><a href="{% url "Author_detail" author_name=each.1 %}" class="btn btn-sm btn-link">{{each.2}}</a></div>
