--- a/templates/topics/index.html
+++ b/templates/topics/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% comment %} {% load i18n %} {% endcomment %}
 
-{% block title %}{% trans "Topics" %}{% endblock title %}
+{% block title %}Topics{% endblock title %}
 
-{% block meta_desc %}{% trans "Explore a vast collection of quotes organized by topic, featuring words of wisdom from renowned authors, historical figures, and everyday people." %}{% endblock meta_desc %}
+{% block meta_desc %}Explore a vast collection of quotes organized by topic, featuring words of wisdom from renowned authors, historical figures, and everyday people.{% endblock meta_desc %}
 
 {% block base_content %}
 
