--- a/templates/authors/index.html
+++ b/templates/authors/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% load i18n %}
-{% block title %}{% trans "Authors" %}{% endblock title %}
+{% comment %} {% load i18n %} {% endcomment %}
+{% block title %}Authors{% endblock title %}
 
-{% block meta_desc %}{% trans "Delve into the minds of literary giants and discover timeless quotes that resonate with the human experience." %}{% endblock meta_desc %}
+{% block meta_desc %}Delve into the minds of literary giants and discover timeless quotes that resonate with the human experience.{% endblock meta_desc %}
 
 {% block base_content %}
 
@@ -10,7 +10,7 @@
 <div class="grid grid-cols-1 md:grid-cols-6 gap-4">
     {% for each in data.items %}
     <ul class="list list-flush">
-        <div class="text-center md:text-left font-semibold">{{each.0|title}} {% trans "Authors" %}</div>
+        <div class="text-center md:text-left font-semibold">{{each.0|title}} Authors</div>
         {% for title,url in each.1.items %}
         <li class="list-item md:p-2"><a href="{{url}}/">{{title|title}}</a></li>
         {% endfor %}
