--- a/templates/topics/topic_individual.html
+++ b/templates/topics/topic_individual.html
@@ -1,9 +1,9 @@
 {% extends "topics/index.html" %}
-{% load i18n %}
+{% comment %} {% load i18n %} {% endcomment %}
 
-{% block title %}{% blocktranslate %}{{topic_name}} Quotes{% endblocktranslate %}{% endblock title %}
+{% block title %}{{topic_name}} Quotes{% endblock title %}
 
-{% block meta_desc %}{% blocktranslate %}Immerse yourself in the beauty of words that capture the essence of {{topic_name}}, offering moments of reflection and motivation{% endblocktranslate %}{% endblock meta_desc %}
+{% block meta_desc %}Immerse yourself in the beauty of words that capture the essence of {{topic_name}}, offering moments of reflection and motivation{% endblock meta_desc %}
 
 {% block base_content %}
 
