--- a/templates/topics/topic_individual.html
+++ b/templates/topics/topic_individual.html
@@ -1,13 +1,11 @@
 {% extends "topics/index.html" %}
 {% comment %} {% load i18n %} {% endcomment %}
 
-{% block title %}{{object}} Quotes{% endblock title %}
+{% block title %}{{object_list.0.topics__topic | title}} Quotes{% endblock title %}
 
-{% block meta_desc %}Immerse yourself in the beauty of words that capture the essence of {{topic_name}}, offering moments of reflection and motivation{% endblock meta_desc %}
+{% block meta_desc %}Immerse yourself in the beauty of words that capture the essence of {{object_list.0.topics__topic | title}}, offering moments of reflection and motivation{% endblock meta_desc %}
 
 {% block base_content %}
-
-
     <div class="grid grid-cols-1 gap-3 md:grid-cols-3">
         {% for each in object_list %}
         <a class="card" href="{% url "Quote_detail" quote_url=each.quote_id %}">
