--- a/templates/topics/topic_individual.html
+++ b/templates/topics/topic_individual.html
@@ -1,9 +1,9 @@
 {% extends "topics/index.html" %}
 {% comment %} {% load i18n %} {% endcomment %}
 
-{% block title %}{{object_list.0.topics__topic | title}} Quotes{% endblock title %}
+{% block title %}{{current_topic}} Quotes{% endblock title %}
 
-{% block meta_desc %}Immerse yourself in the beauty of words that capture the essence of {{object_list.0.topics__topic | title}}, offering moments of reflection and motivation{% endblock meta_desc %}
+{% block meta_desc %}Immerse yourself in the beauty of words that capture the essence of {{current_topic}}, offering moments of reflection and motivation{% endblock meta_desc %}
 
 {% block base_content %}
     <div class="grid grid-cols-1 gap-3 md:grid-cols-3">
