added live search to pages

--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -1,6 +1,6 @@
 {% comment %} {% load i18n %} {% endcomment %}
 <footer class="flex flex-col items-center justify-between px-4 py-12 mx-auto max-w-7xl md:flex-row">
-    <p class="mb-8 text-sm text-center text-gray-700 md:text-left md:mb-0">A Pet Project by Kirmola.</p>
+    <p class="mb-8 text-sm text-center text-gray-700 md:text-left md:mb-0">A Pet Project made with &hearts; by Kirmola.</p>
     <div class="flex items-center space-x-4">
       <a target="_blank" href="https://github.com/kirmola/" class="btn btn-link btn-sm rounded-full">GitHub
       </a>
