--- a/templates/authors/index.html
+++ b/templates/authors/index.html
@@ -6,17 +6,49 @@
 
 {% block base_content %}
 
+<div class="form-icon my-10 max-w-xl">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+    </svg>
+    <input id="searchInput" class="mt-0 text-xl form-input" placeholder="Search Authors..">
+</div>
 
-<div class="grid grid-cols-1 md:grid-cols-6 gap-4">
+<div class="grid grid-cols-1 md:grid-cols-6 gap-4" id="authorList">
     {% for each in object_list %}
     <ul class="list list-flush">
-        {% comment %} <div class="text-center md:text-left font-semibold">{{each.0|title}} Authors</div> {% endcomment %}
         <li class="list-item md:p-2"><a class="btn btn-outline-primary w-full" href="{% url "Author_detail" author_name=each.author_slug %}">{{each.author|title}}</a></li>
     </ul>
     {% endfor %}
-</div>  
+</div>
 
-{% for i in paginator %}
-{{i}}
-{% endfor %}
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+    const searchInput = document.getElementById('searchInput');
+    const listContainers = document.querySelectorAll('#authorList .list');
+
+    searchInput.addEventListener('input', function () {
+        const searchTerm = searchInput.value.trim().toLowerCase();
+
+        listContainers.forEach(function (container) {
+            const listItems = container.querySelectorAll('.list-item');
+            let isVisible = false;
+
+            listItems.forEach(function (item) {
+                const textContent = item.textContent.toLowerCase();
+                if (textContent.includes(searchTerm)) {
+                    isVisible = true;
+                }
+            });
+
+            // Toggle visibility of the container
+            if (isVisible) {
+                container.style.display = 'block';
+            } else {
+                container.style.display = 'none';
+            }
+        });
+    });
+});
+</script>
+
 {% endblock base_content %}
