--- a/templates/quote.html
+++ b/templates/quote.html
@@ -50,14 +50,15 @@
    <div class="p-2 order-3 md:order-2">
       <div class="border-b-2 ">Topics you may be interested in:</div>
       <div class="flex flex-wrap gap-3 m-2">
-         {% for topic in topics_data %}
-            <a href="{% url "Topic_detail" topic_name=topic.topics %}" class="btn rounded-full btn-light-primary">{{topic.topics__topic}}</a>
+         
+         {% for each in topics %}
+            <a href="{% url "Topic_detail" topic_name=each.topic_slug %}" class="btn rounded-full btn-light-primary">{{each}}</a>
          {% endfor %}
       </div>
       <div class="border-b-2 mt-10">Authors you may be interested in:</div>
       <div class="flex flex-wrap gap-3 m-2">
-         {% for author in authors_data %}
-            <a href="{% url "Author_detail" author_name=author.author %}" class="btn rounded-full btn-light-primary">{{author.author__author}}</a>     
+         {% for each in authors %}
+            <a href="{% url "Author_detail" author_name=each.author_slug %}" class="btn rounded-full btn-light-primary">{{each}}</a>     
          {% endfor %}
       </div>
       <div>
@@ -70,16 +71,16 @@
          <div class="card-body">
            <p class="md:p-4 md:text-2xl text-lg text-justify">{{quote}}</p>
            <div class="text-center md:hidden p-4">
-               <a target="_blank" rel="noopener" href="https://twitter.com/intent/tweet?url={{request.build_absolute_uri}}&text={{quote|urlencode}}" class="mx-2 btn btn-icon btn-twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg></a>
+               <a target="_blank" rel="noopener" href="https://twitter.com/intent/tweet?url=" class="mx-2 btn btn-icon btn-twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg></a>
                <a target="_blank" rel="noopener" href="https://instagram.com/quoteshrine" class="mx-2 btn btn-icon btn-instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
                <a target="_blank" rel="noopener" href="#" class="mx-2 btn btn-icon btn-facebook"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg></a>           
             </div>
          </div>
 
          <div class="justify-between card-footer">
-            <a class="btn rounded-full btn-light-primary btn-sm" href="{% url "Author_detail" author_name=author %}">{{author_title}}</a>
+            <a class="btn rounded-full btn-light-primary btn-sm" href="">{{author_title}}</a>
             <div class="hidden md:block">
-               <a target="_blank" rel="noopener" href="https://twitter.com/intent/tweet?url={{request.build_absolute_uri}}&text={{quote|urlencode}}" class="md:mx-2 btn btn-icon btn-twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg></a>
+               <a target="_blank" rel="noopener" href="https://twitter.com/intent/tweet?url=" class="md:mx-2 btn btn-icon btn-twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg></a>
                <a target="_blank" rel="noopener" href="https://instagram.com/quoteshrine" class="md:mx-2 btn btn-icon btn-instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
                <a target="_blank" rel="noopener" href="#" class="md:mx-2 btn btn-icon btn-facebook"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg></a>           
             </div>
