--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -2,37 +2,66 @@
 
 {% comment %} {% load i18n %} {% endcomment %}
 
-{% block title %}{% trans "Contact Us" %}{% endblock title %}
+{% block title %}Contact Me{% endblock title %}
 
-{% block meta_desc %}{% trans "If you are having any problem on/regarding this site, just fill this form and we will be in touch asap." %}{% endblock meta_desc %}
+{% block meta_desc %}If you are having any problem or any suggestion regarding this site, just fill this form and I will be in touch asap.{% endblock meta_desc %}
 
 {% block base_content %}
 <section>
-<form action="" method="post">
-    {% csrf_token %}
+<form id="my-form" action="https://formspree.io/f/xvoengwd" method="post">
+    {% comment %} {% csrf_token %} {% endcomment %}
         <div class="mx-auto max-w-screen-md">
-            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center">{% trans "Contact Us" %}</h2>
-            <p class="my-7 lg:mb-16 font-light text-center sm:text-xl">{% trans "Got a technical issue? Want to send feedback about something? Let us know." %}</p>
+            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center">Contact Me</h2>
+            <p class="my-7 lg:mb-16 font-light text-center sm:text-xl">Spotted a problem ? Want to send feedback about something? Let me know.</p>
                 <div class="my-4">
-                    <label for="id_name" class="block mb-2 text-sm font-medium">{% trans "Your Name" %}</label>
-                    {{form.name}}
+                    <label for="name" class="block mb-2 text-sm font-medium">Your Name</label>
+                    <input class="form-input" placeholder="" id="name" name="name">
                 </div>
                 <div class="my-4">
-                    <label for="id_email" class="block mb-2 text-sm font-medium">{% trans "Your email" %}</label>
-                    {{form.email}}
-                </div>
-                <div class="my-4">
-                    <label for="id_problem" class="block mb-2 text-sm font-medium">{% trans "Select your problem below:" %}</label>
-                    {{form.problem}}
+                    <label for="email" class="block mb-2 text-sm font-medium">Your email</label>
+                    <input class="form-input" placeholder="" id="email" name="email">
                 </div>
                 <div class="sm:col-span-2">
-                    <label for="id_elaboration" class="block mb-2 text-sm font-medium">{% trans "Your message" %}</label>
-                    {{form.elaboration}}
+                    <label for="elaboration" class="block mb-2 text-sm font-medium">Your message</label>
+                    <textarea class="form-input" name="elaboration" id="message" rows="3"></textarea>
                 </div>
-            <button type="submit" class="btn btn-outline-primary w-full my-3 btn-lg">{% trans "Send" %}</button>
+            <button id="my-form-button" type="submit" class="btn btn-outline-primary w-full my-3 btn-lg">Send</button>
+            <p id="my-form-status"></p>
+
         </div>
         
     </form>
 </section>
-
+<script>
+    var form = document.getElementById("my-form");
+    
+    async function handleSubmit(event) {
+      event.preventDefault();
+      var status = document.getElementById("my-form-status");
+      var data = new FormData(event.target);
+      fetch(event.target.action, {
+        method: form.method,
+        body: data,
+        headers: {
+            'Accept': 'application/json'
+        }
+      }).then(response => {
+        if (response.ok) {
+          status.innerHTML = "Thanks for your submission!";
+          form.reset()
+        } else {
+          response.json().then(data => {
+            if (Object.hasOwn(data, 'errors')) {
+              status.innerHTML = data["errors"].map(error => error["message"]).join(", ")
+            } else {
+              status.innerHTML = "Oops! There was a problem submitting your form"
+            }
+          })
+        }
+      }).catch(error => {
+        status.innerHTML = "Oops! There was a problem submitting your form"
+      });
+    }
+    form.addEventListener("submit", handleSubmit)
+  </script>
 {% endblock base_content %}
