--- a/templates/quote.html
+++ b/templates/quote.html
@@ -16,8 +16,8 @@
       <div class="card">
          <div class="card-body">
             <div class="flex flex-col">
-               <a class="rounded-lg w-full mb-4" href="{% get_media_prefix %}{{main_image}}" data-fancybox="gallery" >
-                  <img class="w-full h-auto rounded-lg" src="{% get_media_prefix %}{{main_image}}" alt="Large Image">
+               <a class="rounded-lg w-full mb-4" href="{% get_media_prefix %}{{object.quote_id}}-1.png" data-fancybox="gallery" >
+                  <img class="w-full h-auto rounded-lg" src="{% get_media_prefix %}{{object.quote_id}}-1.png" alt="Large Image">
                </a> 
                <div class="flex justify-between">
                   {% for i,j in images %}
