--- a/templates/qotd.html
+++ b/templates/qotd.html
@@ -1,7 +1,16 @@
 {% extends "base.html" %}
 {% comment %} {% load i18n %} {% endcomment %}
-
+{% load static %}
 {% block title %}Quote of the Day{% endblock title %}
+
+{% block custom_css_js %}
+
+<script src="{% static "js/fancybox.umd.js" %}"></script>
+
+<link rel="stylesheet" href="{% static "css/fancybox.css" %}"/>
+
+
+{% endblock custom_css_js %}
 
 {% block meta_desc %}{% endblock meta_desc %}
 
@@ -16,15 +25,39 @@
         </blockquote>
     </div>      
 
+    <div class="grid grid-cols-1 gap-3 md:grid-cols-2">
     {% for each in extra_quotes %}
-        <div class="card">
-            <div class="card-header">
-            <div class="font-semibold text-xl text-primary"><a href="{% url "Topic_detail" topic_name=each.topics %}">{{each.topics__topic}} Quote of the Day</a></div>
-            </div>
-            <div class="card-body md:text-xl"><blockquote><a href="{% url "Quote_detail" quote_url=each.quote_id %}">{{each.quote}}</a></blockquote></div>
-            <div class="card-footer"><a href="{% url "Author_detail" author_name=each.author %}" class="btn btn-sm btn-link">{{each.author__author}}</a></div>
+
+    <div class="card">
+        <a href="{% get_media_prefix %}{{ each.quote_id }}-1.png" data-fancybox="gallery">
+            <img class="rounded-t card-image" loading="lazy" src="{% get_media_prefix %}{{ each.quote_id }}-1.png" alt=""> 
+        </a>
+        <div class="card-header">
+            <a class="font-semibold text-xl" href="{% url "Topic_detail" topic_name=each.topics %}">{{each.topics__topic}} Quote of the Day</a>
         </div>
-        
-        {% endfor %}
-</div>
+        <div class="card-body md:text-xl">
+            <blockquote><a href="{% url "Quote_detail" quote_url=each.quote_id %}">
+                {{each.quote}}</a></blockquote></div>
+                <div class="card-footer"><a href="{% url "Author_detail" author_name=each.author %}" class="btn btn-sm btn-link">{{each.author__author}}</a></div>
+            </div>
+            
+            {% endfor %}
+        </div>
+        </div>
+
+
+        <script>
+            Fancybox.bind("[data-fancybox]", {
+               hideScrollbar: true,
+               Toolbar: {
+                  display: {
+                    left: ["infobar"],
+                    middle: [],
+                    right: ["slideshow", "download", "thumbs", "close"],
+                  },
+                },
+            });
+            
+          </script>
+         
 {% endblock base_content %}
