--- a/templates/authors/author_individual.html
+++ b/templates/authors/author_individual.html
@@ -18,7 +18,7 @@
             <a target="_blank" class="no-underline" href="{% url 'Quote_detail' quote_url=each.quote_id %}">{{ each.quote }}</a>
           </p>
           <div class="text-center md:hidden p-4">
-            <a target="_blank" rel="noopener" href="//x.com/intent/tweet?url=" class="mx-2 btn btn-icon btn-twitter">
+            <a target="_blank" rel="noopener" href="//x.com/intent/post?url=https://quotes.kirmola.dev{% url 'Quote_detail' quote_url=each.quote_id %}&text=Read+this+awesome+quote+by+{{ current_author.author__author }}" class="mx-2 btn btn-icon btn-twitter">
                 <svg width="24" height="24" viewBox="0 0 300 271" xmlns="http://www.w3.org/2000/svg">
                     <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z"/>
                   </svg>
@@ -42,7 +42,7 @@
         <div class="justify-between card-footer">
           {% comment %} <a class="btn rounded-full btn-light-primary btn-sm" href="">{{ each }}</a> {% endcomment %}
           <div class="hidden md:block">
-            <a target="_blank" rel="noopener" href="//x.com/intent/tweet?url=" class="btn btn-icon btn-twitter">
+            <a target="_blank" rel="noopener" href="//x.com/intent/post?url=https://quotes.kirmola.dev{% url 'Quote_detail' quote_url=each.quote_id %}&text=Read+this+awesome+quote+by+{{ current_author.author__author }}" class="btn btn-icon btn-twitter">
                 <svg width="24" height="24" viewBox="0 0 300 271" xmlns="http://www.w3.org/2000/svg">
                     <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z"/>
                   </svg>
