--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -8,6 +8,7 @@
       {% comment %} Desktop Menu {% endcomment %}
       <div class="flex items-center space-x-1">
         <div class="hidden space-x-1 md:inline-flex">
+          <a href="https://kirmola.dev" class="btn btn-sm btn-link">My Website</a>
           <a href="{% url "topics" %}" class="btn btn-sm btn-link">Topics</a>
           <a href="{% url "authors" %}" class="btn btn-sm btn-link">Authors</a>
           <a href="{% url "qotd" %}" class="btn btn-sm btn-link">Quote of the Day</a>
@@ -72,16 +73,17 @@
               </svg>
               <span class="sr-only">Close Menu</span>
             </button>
+            <a href="https://kirmola.dev" class="btn btn-sm btn-link">My Website</a>
             <a href="{% url "topics" %}" class="w-full btn btn-link">Topics</a>
             <a href="{% url "authors" %}" class="w-full btn btn-link">Authors</a>
             <a href="{% url "contact" %}" class="w-full btn btn-link">Contact</a>
             <a href="{% url "qotd" %}" class="w-full btn btn-link">Quote of the Day</a>
-            <div class="form-icon">
+            {% comment %} <div class="form-icon">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
               </svg>
               <input class="mt-0 text-sm form-input" placeholder="Search...">
-            </div>
+            </div> {% endcomment %}
             {% comment %} <a href="#" class="w-full btn btn-link">Sign in</a> {% endcomment %}
           </div>
         </div>
