--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,7 +16,7 @@
 
 
 
-    <a target="_blank" rel="noopener" href="" class="md:w-36 md:my-1 md:mx-1 rounded-full btn-lg btn btn-icon btn-twitter"><svg width="24" height="24" viewBox="0 0 300 271" xmlns="http://www.w3.org/2000/svg">
+    <a target="_blank" rel="noopener" href="//x.com/intent/post?url=https://quotes.kirmola.dev&text=Read+The+Awesome+Quotes+by+Famous+Authors. +@kirmolaa's+QuotesApp" class="md:w-36 md:my-1 md:mx-1 rounded-full btn-lg btn btn-icon btn-twitter"><svg width="24" height="24" viewBox="0 0 300 271" xmlns="http://www.w3.org/2000/svg">
       <path d="m236 0h46l-101 115 118 156h-92.6l-72.5-94.8-83 94.8h-46l107-123-113-148h94.9l65.5 86.6zm-16.1 244h25.5l-165-218h-27.4z"/>
     </svg>
     </a>
