removed quoteshrine references

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -8,7 +8,7 @@
       {% comment %} Desktop Menu {% endcomment %}
       <div class="flex items-center space-x-1">
         <div class="hidden space-x-1 md:inline-flex">
-          <a href="https://kirmola.dev" class="btn btn-sm btn-link">My Website</a>
+          <a href="https://kirmola.dev" class="btn btn-sm btn-link btn-outline-success">My Website</a>
           <a href="{% url "topics" %}" class="btn btn-sm btn-link">Topics</a>
           <a href="{% url "authors" %}" class="btn btn-sm btn-link">Authors</a>
           <a href="{% url "qotd" %}" class="btn btn-sm btn-link">Quote of the Day</a>
@@ -73,7 +73,7 @@
               </svg>
               <span class="sr-only">Close Menu</span>
             </button>
-            <a href="https://kirmola.dev" class="btn btn-sm btn-link">My Website</a>
+            <a href="https://kirmola.dev" class="btn btn-sm btn-link btn-outline-success">My Website</a>
             <a href="{% url "topics" %}" class="w-full btn btn-link">Topics</a>
             <a href="{% url "authors" %}" class="w-full btn btn-link">Authors</a>
             <a href="{% url "contact" %}" class="w-full btn btn-link">Contact</a>
